# ChangeLog for mail-client/sylpheed
# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/mail-client/sylpheed/ChangeLog,v 1.208 2006/12/24 14:44:03 hattya Exp $

*sylpheed-2.3.0 (24 Dec 2006)

  24 Dec 2006; Akinori Hattori <hattya@gentoo.org> +sylpheed-2.3.0.ebuild:
  new upstream release. fixes bug #158663.

  03 Dec 2006; Markus Rothe <corsair@gentoo.org> sylpheed-2.2.9.ebuild:
  Stable on ppc64

*sylpheed-2.2.10 (01 Dec 2006)

  01 Dec 2006; Akinori Hattori <hattya@gentoo.org> +sylpheed-2.2.10.ebuild:
  new upstream release.

  26 Nov 2006; Akinori Hattori <hattya@gentoo.org> -sylpheed-2.2.4.ebuild,
  sylpheed-2.2.5.ebuild, sylpheed-2.2.6.ebuild, sylpheed-2.2.7.ebuild,
  sylpheed-2.2.9.ebuild:
  fixes bug #150269.

  06 Nov 2006; Matti Bickel <mabi@gentoo.org> sylpheed-2.2.9.ebuild:
  Stable on ppc (bug #154007)

  05 Nov 2006; Daniel Gryniewicz <dang@gentoo.org> sylpheed-2.2.9.ebuild:
  Marked stable on amd64 for bug #154007

  31 Oct 2006; Gustavo Zacarias <gustavoz@gentoo.org> sylpheed-2.2.9.ebuild:
  Stable on sparc

  30 Oct 2006; Akinori Hattori <hattya@gentoo.org> -sylpheed-2.0.4.ebuild:
  remove old ebuild.

  30 Oct 2006; Akinori Hattori <hattya@gentoo.org> sylpheed-2.2.9.ebuild:
  stable on x86.

  21 Oct 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  sylpheed-2.2.7.ebuild:
  ppc stable

  20 Oct 2006; Bryan Østergaard <kloeri@gentoo.org> sylpheed-2.2.7.ebuild:
  Stable on Alpha.

  11 Oct 2006; Markus Rothe <corsair@gentoo.org> sylpheed-2.2.7.ebuild:
  Stable on ppc64

  05 Oct 2006; Gustavo Zacarias <gustavoz@gentoo.org> sylpheed-2.2.7.ebuild:
  Stable on sparc

  27 Sep 2006; Akinori Hattori <hattya@gentoo.org> sylpheed-2.2.7.ebuild:
  stable on x86.

  27 Sep 2006; Akinori Hattori <hattya@gentoo.org> sylpheed-2.0.4.ebuild,
  sylpheed-2.2.4.ebuild, sylpheed-2.2.5.ebuild, sylpheed-2.2.6.ebuild,
  sylpheed-2.2.7.ebuild:
  good-day.net -> sraoss.jp

*sylpheed-2.2.9 (27 Sep 2006)
