@@ -20,6 +20,7 @@ DIST sylpheed-2.2.6.tar.bz2 2537355 RMD160 020045ee924cc7a4aea26ca6bc558945a4b20
 DIST sylpheed-2.2.7.tar.bz2 2567665 RMD160 d2db73329adccccefa698b8eeee148de152d1233 SHA1 96597903c950b4170fc5fa7d13e36a7f4afd56c6 SHA256 bfa6d6680cbaae671b87978cf4385ae5a4565a640ebb54ef8243df86cd15a3f4
 DIST sylpheed-2.2.9.tar.bz2 2574579 RMD160 a6432478b275a54dc00aa2ce1bc106b434cdba66 SHA1 a465ebf39745c9ecea25ddd8e27e622eafa71720 SHA256 72a6ab7c8a0baf0d1d432929c19a7d096335ba4adc43e40488b6a77e5995a0f5
 DIST sylpheed-2.3.0.tar.bz2 2623879 RMD160 7960c3973a54e6b4c551abfc7fa46d2d5a43e5c2 SHA1 9ed14fa0ee242182712b8748de1c507892db9222 SHA256 693194981892259737c8e2d2b5f375d96441643e44c3d27c21f1c1213423fb0b
+DIST sylpheed-2.3.1.tar.bz2 2614551 RMD160 2ef027681b34641c32e2c962159fc990fd3c2ef3 SHA1 a88e728853ac5a546d063247ba9f7755d54adc52 SHA256 d08f4fe273c06d874bafd05c47e9e6433777fc9840372488bf0f5ec94e90cd7e
 EBUILD sylpheed-2.2.10.ebuild 1512 RMD160 c501d12dd2b9408b7c5784f3cbfc8318050bbf3b SHA1 ff45be042b3b44b7de4fe179421cf0077107cf82 SHA256 62681948c74ad56d438f23d668e0b8907c6d3b5f553753197641682548241b46
 MD5 2b3bf1564004456761cd0c795257d3ac sylpheed-2.2.10.ebuild 1512
 RMD160 c501d12dd2b9408b7c5784f3cbfc8318050bbf3b sylpheed-2.2.10.ebuild 1512
@@ -44,10 +45,14 @@ EBUILD sylpheed-2.3.0.ebuild 1511 RMD160 99acc684ff83d798704fb4a3a8e4577e8f8e08b
 MD5 0d55c3be7c918e25966bdab9c47a5e45 sylpheed-2.3.0.ebuild 1511
 RMD160 99acc684ff83d798704fb4a3a8e4577e8f8e08b3 sylpheed-2.3.0.ebuild 1511
 SHA256 cb5ad20195fb175029f3b13f3ff879d700182a4b023f7e99babb3661de4973ad sylpheed-2.3.0.ebuild 1511
-MISC ChangeLog 35673 RMD160 2eb519ebd9f30578dfc2d783eca4665ad1b28a3d SHA1 7db8971d0a0c12520328d8a3b1d8fa283f45864b SHA256 32665ea137d76a8cd2b8e176daff0422b8cf87dda87d97884327532f331b8f10
-MD5 ed1d942049c1cda1c708785c862dad8c ChangeLog 35673
-RMD160 2eb519ebd9f30578dfc2d783eca4665ad1b28a3d ChangeLog 35673
-SHA256 32665ea137d76a8cd2b8e176daff0422b8cf87dda87d97884327532f331b8f10 ChangeLog 35673
+EBUILD sylpheed-2.3.1.ebuild 1511 RMD160 11feabe6916dcb87ab9e215e0e56e105b9b5f88f SHA1 b44151caf94c00b0a1a61967ece9f38c37d92610 SHA256 5d1b6bdd246c7dedf6848b2270ba0c26f697a49f247edda15fdd082d226b08c1
+MD5 69fbde0e696f989dedb28cd999ef0eab sylpheed-2.3.1.ebuild 1511
+RMD160 11feabe6916dcb87ab9e215e0e56e105b9b5f88f sylpheed-2.3.1.ebuild 1511
+SHA256 5d1b6bdd246c7dedf6848b2270ba0c26f697a49f247edda15fdd082d226b08c1 sylpheed-2.3.1.ebuild 1511
+MISC ChangeLog 35804 RMD160 6d179ecf21394a4a879329ca212f173878406e4c SHA1 ee608d66752c04a25ec8a31b2a14941e2f98b97e SHA256 2af57268d77edacc5f0cfca852edbeb5707f8cf60823a17ed17577f550d3d02b
+MD5 1b71cc310d9f1ce869251de21b90f51b ChangeLog 35804
+RMD160 6d179ecf21394a4a879329ca212f173878406e4c ChangeLog 35804
+SHA256 2af57268d77edacc5f0cfca852edbeb5707f8cf60823a17ed17577f550d3d02b ChangeLog 35804
 MISC metadata.xml 231 RMD160 648d342021559d00b487c6f2e0ca5036a0fcb84e SHA1 7ff44c36cd72cd2d6ab274e27b69a6f45ceed124 SHA256 aa52ef57f5156d5eb6abdb1e41b28cafdb6218a6738807d9e3797f99f344b5fb
 MD5 126ca8f672f0296d2f1e6830e6729a91 metadata.xml 231
 RMD160 648d342021559d00b487c6f2e0ca5036a0fcb84e metadata.xml 231
@@ -70,3 +75,6 @@ SHA256 7f38046b42de6e85015cbc55b059ac00dd89291d2b4fe1ef2436939f8bce5da7 files/di
 MD5 08c0899899a8622986a118cec814f344 files/digest-sylpheed-2.3.0 250
 RMD160 49a7217ffbcf399f29a22937e6d33f631622c67a files/digest-sylpheed-2.3.0 250
 SHA256 9d2751c4de5d6d8bf75c799bc92857501f381a6fc1414b2003617ee19b5eedb7 files/digest-sylpheed-2.3.0 250
+MD5 36c2e78465de93f02a8ca4246baa7882 files/digest-sylpheed-2.3.1 250
+RMD160 dd1f5ca81e47e19c7ad472eca6a6fda32e6d1086 files/digest-sylpheed-2.3.1 250
+SHA256 73261f9cb0a5541eec5eb179ea345bcc6324a6cbee610b02402a8e08251f4b88 files/digest-sylpheed-2.3.1 250
