@@ -1,0 +1,3 @@
+MD5 12fb8622bc76b42a3bd6e734495ec4c3 sylpheed-2.3.1.tar.bz2 2614551
+RMD160 2ef027681b34641c32e2c962159fc990fd3c2ef3 sylpheed-2.3.1.tar.bz2 2614551
+SHA256 d08f4fe273c06d874bafd05c47e9e6433777fc9840372488bf0f5ec94e90cd7e sylpheed-2.3.1.tar.bz2 2614551
