@@ -1,6 +1,11 @@
 # ChangeLog for mail-client/sylpheed
-# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/mail-client/sylpheed/ChangeLog,v 1.208 2006/12/24 14:44:03 hattya Exp $
+# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/mail-client/sylpheed/ChangeLog,v 1.209 2007/01/19 10:25:15 hattya Exp $
+
+*sylpheed-2.3.1 (19 Jan 2007)
+
+  19 Jan 2007; Akinori Hattori <hattya@gentoo.org> +sylpheed-2.3.1.ebuild:
+  new upstream release.
 
 *sylpheed-2.3.0 (24 Dec 2006)
 
